Bug 514983 - Unable to re-pick the same color after deleting it
Summary: Unable to re-pick the same color after deleting it
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Color Picker widget (other bugs)
Version First Reported In: 6.5.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-23 17:35 UTC by Erika
Modified: 2026-01-26 19:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erika 2026-01-23 17:35:22 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY


STEPS TO REPRODUCE
1. Pick a color with the color picker
2. Delete the color from the most recent ones
3. Pick the same color again

OBSERVED RESULT
The color doesn't get picked up

EXPECTED RESULT
The color should be picked up

SOFTWARE/OS VERSIONS
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora Linux 43
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
None
Comment 1 Bug Janitor Service 2026-01-23 18:16:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/987
Comment 2 cwo 2026-01-26 19:07:56 UTC
Git commit 016448f4d3058bb02bd04e1f58197367f8b870b6 by Christoph Wolk.
Committed on 26/01/2026 at 17:19.
Pushed by cwo into branch 'master'.

applets/colorpicker: always send currentColorChanged

GrabWidget returns early if the currentColor is changed to the same
color it already is. While this is usually a good idea, it's not here
– the color being set only happens when the user has completed picking
a color, and the widget needs to be informed about this. There's some
extra deduplicating logic there anyway, and re-picking the same color
is legitimate - the user may do this to copy it to the clipboard again,
or may have deleted it from the history, then reconsidered and now try
to re-add it by picking the same color again.

Instead, don't return early if unchanged, and always send the Changed
signal.
FIXED-IN: 6.6.0

M  +2    -3    applets/colorpicker/grabwidget.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/016448f4d3058bb02bd04e1f58197367f8b870b6
Comment 3 cwo 2026-01-26 19:40:41 UTC
Git commit 1b2603d19a8585ae1439d2d5174bbe0936bff90a by Christoph Wolk.
Committed on 26/01/2026 at 19:09.
Pushed by cwo into branch 'Plasma/6.6'.

applets/colorpicker: always send currentColorChanged

GrabWidget returns early if the currentColor is changed to the same
color it already is. While this is usually a good idea, it's not here
– the color being set only happens when the user has completed picking
a color, and the widget needs to be informed about this. There's some
extra deduplicating logic there anyway, and re-picking the same color
is legitimate - the user may do this to copy it to the clipboard again,
or may have deleted it from the history, then reconsidered and now try
to re-add it by picking the same color again.

Instead, don't return early if unchanged, and always send the Changed
signal.
FIXED-IN: 6.6.0


(cherry picked from commit 016448f4d3058bb02bd04e1f58197367f8b870b6)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +2    -3    applets/colorpicker/grabwidget.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/1b2603d19a8585ae1439d2d5174bbe0936bff90a