applets/colorpicker: always send currentColorChanged

GrabWidget returns early if the currentColor is changed to the same
color it already is. While this is usually a good idea, it's not here
– the color being set only happens when the user has completed picking
a color, and the widget needs to be informed about this. There's some
extra deduplicating logic there anyway, and re-picking the same color
is legitimate - the user may do this to copy it to the clipboard again,
or may have deleted it from the history, then reconsidered and now try
to re-add it by picking the same color again.

Instead, don't return early if unchanged, and always send the Changed
signal.

BUG: 514983
FIXED-IN: 6.6.0


(cherry picked from commit 016448f4d3058bb02bd04e1f58197367f8b870b6)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>